--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                     <a href="http://instagram.com" target="_blank">Instagram</a>
                 </li>
             </ul>
+            <a href="https://juraruf.github.io/Lesson2/1/index.html">Первый сайт</a>
+            <a href="https://juraruf.github.io/Lesson2/2/index.html">Второй сайт</a>
             <p class="text">Спасибо за внимание!!! <a href="index1.html">EN</a></p>
         </div>
     </body>
