--- a/index1.html
+++ b/index1.html
@@ -38,6 +38,8 @@
                     <a href="http://instagram.com" target="_blank">Instagram</a>
                 </li>
             </ul>
+            <a href="https://juraruf.github.io/Lesson2/1/index.html">Firts site</a>
+            <a href="https://juraruf.github.io/Lesson2/2/index.html">Second site</a>
             <p class="text">Thank you for your attention!!! <a href="index.html">RU</a></p>
         </div>
     </body>
